--- a/album.html
+++ b/album.html
@@ -120,9 +120,10 @@
 
 <!-- Lista perfiles públicos -->
 <div id="perfilesPublicos">
-  <h4>Perfiles Públicos</h4>
-  <div id="listaPublicos"></div>
+  <h4 id="togglePublicos" style="cursor:pointer;">Perfiles Públicos ▼</h4>
+  <div id="listaPublicos" style="display:none; max-height:200px; overflow-y:auto;"></div>
 </div>
+
 
 <!-- Librerías externas -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
