--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00ffff">
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Bienvenido a la coleccion LCDM</title>
@@ -83,7 +86,7 @@
 
 <!-- Logo arriba -->
 <div id="logo-container">
-    <img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo">
+    <img src="img/logo.png" alt="Logo Los LCDM" id="logo">
 </div>
 
 <!-- Overlay de bienvenida -->
@@ -107,6 +110,14 @@
     <button id="btnEntrarCofundador">Acceso Cofundador 🔒</button>
   </div>
 </div>
+
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker registrado ✅"))
+    .catch(err => console.error("Error SW:", err));
+}
+</script>
 
 <script>
 // ==============================
