--- a/album.html
+++ b/album.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+	<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#00ffff">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LCDM COLECCION</title>
 <link rel="stylesheet" href="style.css">
+
 <style>
 /* Overlay máximo */
 #completado-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff; font-family: sans-serif; font-size: 2rem; z-index: 9999; opacity: 0; pointer-events: none; transition: opacity 0.5s; overflow: hidden; }
@@ -131,6 +134,13 @@
 <script src="codigos.js"></script>
 <script src="qr.js"></script>
 <script src="script.js"></script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker registrado ✅"))
+    .catch(err => console.error("Error SW:", err));
+}
+</script>
 
 <script>
 // ===== Perfil =====
