--- a/album.html
+++ b/album.html
@@ -1,145 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
+<head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Álbum LCDM</title>
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#00ffff">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>LCDM COLECCION</title>
-<link rel="stylesheet" href="style.css">
-
 <style>
-/* Overlay máximo */
-#completado-overlay { position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.9); display: flex; flex-direction: column; justify-content: center; align-items: center; color: #fff; font-family: sans-serif; font-size: 2rem; z-index: 9999; opacity: 0; pointer-events: none; transition: opacity 0.5s; overflow: hidden; }
-#completado-overlay.visible { opacity: 1; pointer-events: all; }
-#completado-overlay h1 { font-size: 3rem; animation: parpadeo 1s infinite alternate; color: gold; text-shadow: 0 0 10px #fff, 0 0 20px yellow; }
-#completado-overlay p { font-size: 1.8rem; text-align: center; }
-#completado-overlay canvas { position: absolute; top:0; left:0; }
-@keyframes parpadeo { 0% { opacity: 1; transform: scale(1); } 50% { opacity: 0.8; transform: scale(1.1); } 100% { opacity: 1; transform: scale(1); } }
-
-/* Overlay de mensajes */
-#overlay-msg { position: fixed; top:50%; left:50%; transform: translate(-50%,-50%); background: rgba(0,0,0,0.95); color: #fff; font-size:1.5rem; padding:2rem; border-radius:15px; z-index:99999; display:none; text-align:center; }
-#overlay-msg button { margin-top:1rem; padding:0.5rem 1rem; font-size:1rem; cursor:pointer; border:none; border-radius:5px; background: gold; color:black; font-weight:bold; }
-
-/* Panel de usuario */
-#panel-perfil { display:none; position: fixed; top:50%; left:50%; transform: translate(-50%,-50%); background: #111; color: #fff; padding:2rem; border-radius:15px; z-index:10000; width: 300px; text-align:center; }
-#panel-perfil input, #panel-perfil textarea { width: 90%; padding:0.5rem; margin:0.5rem 0; border-radius:5px; border:none; font-size:1rem; }
-#panel-perfil button { padding:0.5rem 1rem; margin-top:1rem; border:none; border-radius:5px; background: gold; color:black; font-weight:bold; cursor:pointer; }
-#avatar-preview { width:80px; height:80px; border-radius:50%; margin-bottom:10px; object-fit: cover; border:2px solid gold; }
-#avatar-barra { width:30px; height:30px; border-radius:50%; border:1px solid gold; object-fit:cover; }
-
-/* Panel Cofundador */
-#panel-cofundador { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#111; color:#fff; padding:2rem; border-radius:15px; z-index:10001; width:400px; text-align:center; }
-#panel-cofundador input { width:80%; padding:0.5rem; margin:0.5rem 0; border-radius:5px; border:none; font-size:1rem; }
-#panel-cofundador button { padding:0.5rem 1rem; margin-top:1rem; border:none; border-radius:5px; background:gold; color:black; font-weight:bold; cursor:pointer; }
-
-/* Lista perfiles públicos */
-#perfilesPublicos { position:fixed; bottom:10px; right:10px; background:#222; padding:10px; border-radius:10px; color:#fff; max-height:300px; overflow-y:auto; width:200px; }
-#perfilesPublicos h4 { margin:0 0 5px 0; color:gold; }
-#listaPublicos div { display:flex; align-items:center; gap:5px; cursor:pointer; }
-#listaPublicos div img { width:25px; height:25px; border-radius:50%; border:1px solid gold; }
+  body{font-family:sans-serif;background:#000;color:#fff;min-height:100vh;padding:20px}
+  #top{display:flex;align-items:center;gap:12px}
+  #figuritasContainer{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:12px;margin-top:18px}
+  .figurita{background:#111;padding:10px;border-radius:8px;text-align:center}
+  .btn{background:gold;color:#000;padding:8px 12px;border-radius:8px;border:none;cursor:pointer}
+  a{color:lightblue}
 </style>
 </head>
 <body>
-
-<!-- Logo -->
-<div id="logo-container">
-  <a href="index.html"><img src="https://i.ibb.co/781Qj0J/logo.png" alt="Logo Los LCDM" id="logo"></a>
-</div>
-
-<!-- Barra superior -->
-<div id="barra-superior" style="display:flex; align-items:center; gap:10px;">
-  <img id="avatar-barra" src="https://i.ibb.co/781Qj0J/logo.png" alt="Avatar">
-  <span id="usuarioActivo"></span>
-  <span id="contador">0 / 5 Colección</span>
-  <div style="position: relative; display: inline-block;">
-    <button id="btnMio" 
-        style="color:#00ffff; background:linear-gradient(45deg, #ff0, #f0f); border:none; border-radius:10px; padding:5px 10px; cursor:pointer; font-weight:bold;"
-        onclick="location.href='muro.html'">
-  ✨ Global ✨
-</button>
-    <button id="btnAyuda">Ayuda</button>
-    <div id="tooltipAyuda">
-      <div class="tooltipFlecha"></div>
-      <div class="tooltipContenido">
-        <h3>Ayuda / Reglas</h3>
-        <p>
-          1. Puedes coleccionar hasta 5 figuritas por día.<br>
-          2. Haz clic en cada figurita para ver su contenido.<br>
-          3. ¡Disfruta del álbum y comparte con tus amigos!<br>
-          4. Continúa agregando más reglas si lo deseas.<br>
-          5. Personaliza todo el contenido.<br>
-          6. Agrega imágenes si quieres.
-        </p>
-      </div>
-    </div>
-  </div>
-  <button id="btnReiniciar">&#127873; Canjear Premio</button>
-  <button id="btnLogout">Cerrar Sesión</button>
-  <a href="ranking.html" style="color:yellow;">🏆 Ranking</a>
-  <button id="btnPerfil" style="color:orange;background:none;border:none;cursor:pointer;">⚙️ Perfil</button>
-  <button id="btnCofundador" style="display:none;color:red;background:none;border:none;cursor:pointer;">👑 Panel Cofundador</button>
-</div>
-
-<!-- Álbum -->
-<div id="album-container">
-  <h1>Mi Propia Colección</h1>
-  <div class="figuritas" id="figuritasContainer"></div>
-</div>
-
-<!-- Escaneo QR -->
-<div class="qr-section">
-  <div id="qr-reader"></div>
-  <button id="btnScanQR" onclick="iniciarScanner()">&#128247; Coleccionar QR</button>
-</div>
-
-<!-- Toast y Overlay mensajes -->
-<div id="toast"></div>
-<div id="completado-overlay"></div>
-<div id="overlay-msg">
-  <div id="overlay-msg-text"></div>
-  <button id="overlay-msg-close">Cerrar</button>
-</div>
-
-<!-- Panel de usuario (Perfil) -->
-<div id="panel-perfil">
-  <h2>Mi Perfil</h2>
-  <img id="avatar-preview" src="https://i.ibb.co/781Qj0J/logo.png" alt="Avatar">
-  <input type="text" id="nuevoNombre" placeholder="Nuevo nombre">
-  <input type="password" id="nuevaClave" placeholder="Nueva clave">
-  <textarea id="perfilBio" placeholder="Escribe tu bio"></textarea>
-  <label><input type="checkbox" id="perfilPublicoCheck"> Hacer perfil público</label>
-  <input type="file" id="nuevoAvatar" accept="image/*">
-  <button id="btnGuardarCambios">Guardar Cambios</button>
-  <button id="btnCerrarPerfil">Cerrar</button>
-</div>
-
-<!-- Panel Cofundador -->
-<div id="panel-cofundador">
-  <h2>Panel Cofundador 🔒</h2>
-  <input type="password" id="adminPass" placeholder="Contraseña admin">
-  <button id="btnAdminLogin">Ingresar</button>
-  <button id="btnCerrarAdmin">Cerrar</button>
-  <div id="adminAcciones" style="margin-top:1rem;display:none;">
-    <button id="btnResetAll">Resetear demo (borrar usuarios)</button>
-    <button id="btnExport">Exportar usuarios (console)</button>
+<div id="top">
+  <div id="usuarioArea"></div>
+  <div style="margin-left:auto">
+    <button class="btn" onclick="location.href='muro.html'">Ir al Muro</button>
+    <button class="btn" onclick="location.href='ranking.html'">Ranking</button>
+    <button class="btn" id="btnLogout">Cerrar sesión</button>
   </div>
 </div>
 
-<!-- Librerías externas -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-<script src="https://unpkg.com/html5-qrcode"></script>
+<h2>Mi Colección</h2>
+<div id="figuritasContainer"></div>
+
 <script src="codigos.js"></script>
-<script src="qr.js"></script>
-<script src="script.js"></script>
-
+<script src="frontend-api.js"></script>
 <script>
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("service-worker.js")
-    .then(() => console.log("Service Worker registrado ✅"))
-    .catch(err => console.error("Error SW:", err));
+function getSessionUsuario(){
+  const s = sessionStorage.getItem('lcdm_usuario');
+  if(!s) return null;
+  try{ return JSON.parse(s); } catch(e){ return null; }
 }
-</script>
 
+const usuario = getSessionUsuario();
+if(!usuario){ location.href='index.html'; }
+
+document.getElementById('usuarioArea').innerHTML = `<img src="${usuario.avatar}" style="width:48px;height:48px;border-radius:50%;margin-right:8px;vertical-align:middle"> <strong>${usuario.usuario}</strong>`;
+document.getElementById('btnLogout').addEventListener('click', ()=>{ sessionStorage.removeItem('lcdm_usuario'); location.href='index.html'; });
+
+// Render figuritas (estáticas desde codigos.js)
+const cont = document.getElementById('figuritasContainer');
+figuritasData.forEach(f => {
+  const div = document.createElement('div');
+  div.className = 'figurita';
+  div.innerHTML = `<img src="${f.imgBloqueada}" style="width:100%;height:120px;object-fit:cover;border-radius:6px"><h4>${f.nombre}</h4>`;
+  cont.appendChild(div);
+});
+</script>
 </body>
 </html>
